--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,10 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="gray">#737373</color>
+    <color name="light_gray">#D4D4D4</color>
+    <color name="et_text_light_gray">#A3A3A3</color>
+    <color name="otp_btn_light_gray">#E6E5E5</color>
+    <color name="sign_in">#525252</color>
+    <color name="forgot_password">#262626</color>
 </resources>
